End of discussion

--- a/conflict.bib
+++ b/conflict.bib
@@ -598,3 +598,72 @@ pages={693–715}}
   year={2013}
 }
 
+@misc{ohchr2012nepal,
+  title={Nepal Conflict Report},
+  author={OHCHR, UN},
+  year={2012},
+  publisher={United Nations Office of the High Commissioner for Human Rights Geneva}
+}
+
+@article{gelfand2012hierarchical,
+  title={Hierarchical modeling for spatial data problems},
+  author={Gelfand, Alan E},
+  journal={Spatial statistics},
+  volume={1},
+  pages={30-39},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{gelfand2016spatial,
+  title={Spatial statistics and Gaussian processes: A beautiful marriage},
+  author={Gelfand, Alan E and Schliep, Erin M},
+  journal={Spatial Statistics},
+  volume={18},
+  pages={86-104},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{gelfand2003spatial,
+  title={Spatial modeling with spatially varying coefficient processes},
+  author={Gelfand, Alan E and Kim, Hyon-Jung and Sirmans, CF and Banerjee, Sudipto},
+  journal={Journal of the American Statistical Association},
+  volume={98},
+  number={462},
+  pages={387-396},
+  year={2003},
+  publisher={Taylor \& Francis}
+}
+
+@article{mueller_2016,
+  title={Reading between the lines: Prediction of political violence using newspaper text},
+  author={Mueller, Hannes Felix and Rauh, Christopher},
+  journal={American Political Science Review},
+  volume={2},
+  number={112},
+  pages={358-375},
+  year={2016}
+}
+
+@article{chadefaux_2014,
+  title={Early warning signals for war in the news},
+  author={Chadefaux, Thomas},
+  journal={Journal of Peace Research},
+  volume={51},
+  number={1},
+  pages={5-18},
+  year={2014},
+  publisher={Sage Publications Sage UK: London, England}
+}
+
+@article{mainwaring_2013,
+  title={Democratic breakdown and survival},
+  author={Mainwaring, Scott and P{\'e}rez-Li{\~n}{\'a}n, An{\'\i}bal},
+  journal={Journal of Democracy},
+  volume={24},
+  number={2},
+  pages={123-137},
+  year={2013},
+  publisher={Johns Hopkins University Press}
+}
